[gd_scene load_steps=2 format=3 uid="uid://ct5ptoc4pc28h"]

[ext_resource type="Script" uid="uid://btnie18itmym7" path="res://Scripts/Challenge/challenge_icon.gd" id="1_qs0d0"]

[node name="ChallengeIcon" type="TextureButton"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qs0d0")

[node name="LabelBg" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = 1.0
offset_right = 40.0
offset_bottom = 41.0

[node name="HoverLabel" type="Label" parent="LabelBg"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 105.0
offset_right = 50.0
offset_bottom = 132.0

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
